@@ -1,3 +1,11 @@
+/application.xml
+/code-generators.xml
+/controllers.xml
+/converters.xml
+/default-size.xml
+/dtds/
+/editors.xml
+/org/
 /GalleryImage.hbm.xml
 /META-INF/
 /OpenXavaTest-labels_ca.properties
@@ -8,24 +16,18 @@
 /OpenXavaTest-messages_en.properties
 /OpenXavaTest-messages_es.properties
 /OpenXavaTest-messages_fr.properties
-/application.xml
-/code-generators.xml
-/controllers.xml
-/converters.xml
-/default-size.xml
-/dtds/
-/editors.xml
 /hibernate-junit.cfg.xml
 /hibernate.cfg.xml
-/org/
 /portlets/
+/stereotype-type-default.xml
+/tabs-default-values.xml
+/validators.xml
 /BeansContext.properties
 /Corporation.html
 /CorporationEmployee.html
 /Customer.jrxml
 /Film.jrxml
 /Images.jrxml
-/Invoice.jrxml
 /LoginContextFactory.properties
 /jndi-jboss.properties
 /jndi-websphere.properties
@@ -35,5 +37,6 @@
 /naviox.properties
 /xava-junit.properties
 /xava.properties
+/Invoice.jrxml
 /InvoiceNoVAT.jrxml
 /Products.jrxml
